tests/files/SecurityGroup.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Create a security group with outbound HTTP(S) and NTP access.
Parameters:
  VpcId:
    Type: String
    Description: ID of the VPC used to create the Public Subnet
Resources:
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP(S) and NTP Access
      VpcId:
        Ref: VpcId
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: '2'
        ToPort: !Sub '65535'
        CidrIp: 0.0.0.0/0
      - IpProtocol: udp
        FromPort: '123'
        ToPort: '123'
        CidrIp: 0.0.0.0/0
Outputs:
  SecurityGroupId:
    Description: Security group ID
    Value: !Ref SecurityGroup
